src/test/ui/resolve/unboxed-closure-sugar-nonexistent-trait.stderr
error[E0405]: cannot find trait `Nonexist` in this scope
  --> $DIR/unboxed-closure-sugar-nonexistent-trait.rs:11:8
   |
LL | fn f<F:Nonexist(isize) -> isize>(x: F) {}
   |        ^^^^^^^^ not found in this scope

error[E0404]: expected trait, found type alias `Typedef`
  --> $DIR/unboxed-closure-sugar-nonexistent-trait.rs:16:8
   |
LL | fn g<F:Typedef(isize) -> isize>(x: F) {}
   |        ^^^^^^^^^^^^^^^^^^^^^^^ type aliases cannot be used for traits

error: cannot continue compilation due to previous error

You've got a few errors: E0404, E0405
If you want more information on an error, try using "rustc --explain E0404"
